--- a/code/prompt/prompt_mockdata.yaml
+++ b/code/prompt/prompt_mockdata.yaml
@@ -1,23 +1,23 @@
 prompt_mockdata: |
   Database: owner
     Collection: owner
-      Field: owner_id [string]: The unique ID of each restaurant, used to identify the owner of the restaurant. -> `"e1e6b2..."`  
-            restaurant_name [string]: The name of the restaurant. -> "Luffy" 
-            city [string]: The province where the restaurant operates. -> "Bangkok"
+      Field: owner_id [string]: The unique ID of each restaurant, used to identify the owner of the restaurant. e.g. `"e1e6b2..."`  
+            restaurant_name [string]: The name of the restaurant. e.g. "Luffy" 
+            city [string]: The province where the restaurant operates. e.g. "Bangkok"
                                             
   Database: sales
     Collection: menus
-      Field: owner_id [string]: The unique ID of each restaurant, used to identify the owner of the restaurant. -> `"e1e6b2..."` 
-            menu_id [string]: The unique ID of each menu item. -> 1
-            menu_name [string]: The name of each menu item. -> "Pad Thai"
-            category [string]: The food category of the menu item. -> "Main"
-            price [number]: The price of the menu item. -> 60
-            cost [number]: The cost of the menu item. -> 30
+      Field: owner_id [string]: The unique ID of each restaurant, used to identify the owner of the restaurant. e.g. `"e1e6b2..."` 
+            menu_id [string]: The unique ID of each menu item. e.g. 1
+            menu_name [string]: The name of each menu item. e.g. "Pad Thai"
+            category [string]: The food category of the menu item. e.g. "Main"
+            price [number]: The price of the menu item. e.g. 60
+            cost [number]: The cost of the menu item. e.g. 30
   
   Database: sales
     Collection: sales
-      Field: owner_id [string]: The unique ID of each restaurant, used to identify the owner of the restaurant. -> `"e1e6b2..."` 
-            menu_id [string]: The unique ID of each menu item. -> 1
-            quantity [string]: The quantity of the item sold. -> 3
-            order_date [string]: The date when the item was sold. -> "2026-01-01"
+      Field: owner_id [string]: The unique ID of each restaurant, used to identify the owner of the restaurant. e.g. `"e1e6b2..."` 
+            menu_id [string]: The unique ID of each menu item. e.g. 1
+            quantity [string]: The quantity of the item sold. e.g. 3
+            order_date [string]: The date when the item was sold. e.g. "05/01/2026": format DD/MM/YYYY
   
